# PDF_Cutter

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup_dev.bat  setup_dev.sh
.github/workflows/: build.yml
